--- a/config/bootstrap/bootstrap-cli-config.yml
+++ b/config/bootstrap/bootstrap-cli-config.yml
@@ -56,29 +56,87 @@ bootstrap:
     # Mapping between IDP (Azure Active Directory) groups and CDF groups.
     idp-cdf-mappings:
     # Support multiple CDF Projects, like dev/test/prod in one config.
-        - cdf-project: <CDF project name> # i.e. bootcamp-01-test
+        - cdf-project: cdf-bootcamp-02-test # i.e. bootcamp-01-test
           mappings:
               - cdf-group: cdf:root
-                idp-source-id: <AAD Group Object id>
-                idp-source-name: <AAD Group name>
+                idp-source-id: 9e300e9f-9a01-4566-aea9-3866a1ad182b
+                idp-source-name: bootcamp-02-test-admin
               - cdf-group: cdf:all:owner
-                idp-source-id: <AAD Group Object Id> # for the AAD Group to be matched to cdf-group
-                idp-source-name: <AAD Group name> # i.e. bootcamp-01-test-all-owner
+                idp-source-id: 3967e8d5-c523-40a6-965c-f6871bee570f # for the AAD Group to be matched to cdf-group
+                idp-source-name: bootcamp-02-test-all-owner # i.e. bootcamp-01-test-all-owner
               - cdf-group: cdf:all:read
-                idp-source-id: <AAD Group Object Id> # for the AAD Group to be matched to cdf-group
-                idp-source-name: <AAD Group name> # i.e. bootcamp-01-test-all-read
+                idp-source-id: 7cc85663-f72f-4ce3-9062-86b64cae04d4 # for the AAD Group to be matched to cdf-group
+                idp-source-name: bootcamp-02-test-all-read # i.e. bootcamp-01-test-all-read
 
+        - cdf-project: cdf-bootcamp-02-prod # i.e. bootcamp-01-test
+          mappings:
+              - cdf-group: cdf:root
+                idp-source-id: 2141be66-3654-4621-9ce9-47844e363544
+                idp-source-name: bootcamp-02-prod-admin
+              - cdf-group: cdf:all:owner
+                idp-source-id: 7dca1021-371d-4b92-bd57-cb93cc1cc9b5 # for the AAD Group to be matched to cdf-group
+                idp-source-name: bootcamp-02-prod-all-owner # i.e. bootcamp-01-test-all-owner
+              - cdf-group: cdf:all:read
+                idp-source-id: aaccd676-ab1b-4f43-8ff5-7972e2d3a4fe # for the AAD Group to be matched to cdf-group
+                idp-source-name: bootcamp-02-prod-all-read # i.e. bootcamp-01-test-all-read
+
+    # namespaces:
+    #     # Typical config will have a namespace for data sources ("src") and a namespace for use cases ("uc")
+    #     - ns-name: src
+    #       description: Data sources for the Ice Cream Factory # HINT
+
+    #       # Node names will normally follow src:001:srcname or uc:001:usecasename naming convention
+    #       ns-nodes:
+    #           - node-name: src:001:sap
+    #             description: Data from SAP # HINT
+    #     # HINT: Add another namespace below
 
     namespaces:
-        # Typical config will have a namespace for data sources ("src") and a namespace for use cases ("uc")
-        - ns-name: <Namespace name>
+        # Typical config will have separate namespace by data source ("src") and use cases ("uc")
+        - ns-name: src
           description: Data sources for the Ice Cream Factory # HINT
 
-          # Node names will normally follow src:001:srcname or uc:001:usecasename naming convention
           ns-nodes:
-              - node-name: <Node name>
-                description: Data from SAP # HINT
-        # HINT: Add another namespace below
+            - node-name: src:001:sap
+              description: Source 01 data from SAP
+            - node-name: src:002:opcua
+              description: Source 02 data from opcua
+        # Typical config will have separate namespace by data source ("src") and use cases ("uc")
+        - ns-name: uc
+          description: Use cases representing the data/products
+
+        # Description names will normally follow src:001:srcname or uc:001:usecasename naming convention
+          ns-nodes:
+            - node-name: uc:001:oee
+              description: Use case 001 Over all Equipment effectiveness
+              shared-access:
+                read:
+                  - node-name: src:001:sap
+                  - node-name: src:002:opcua
+
+
+  # namespaces:
+  #   # Typical config will have separate namespace by data source ("src") and use cases ("uc")
+  #   - ns-name: src
+  #     description: Sources used for data extraction
+  #     # Description names will normally follow src:001:srcname or uc:001:usecasename naming convention
+  #     ns-nodes:
+  #       - node-name: src:001:sap
+  #         description: Source 01 data from SAP
+  #       - node-name: src:002:opcua
+  #         description: Source 02 data from opcua
+  #   # Typical config will have separate namespace by data source ("src") and use cases ("uc")
+  #   - ns-name: uc
+  #     description: Use cases representing the data/products
+
+  #     # Description names will normally follow src:001:srcname or uc:001:usecasename naming convention
+  #     ns-nodes:
+  #       - node-name: uc:001:oee
+  #         description: Use case 001 Over all Equipment effectiveness
+  #         shared-access:
+  #           read:
+  #             - node-name: src:001:sap
+  #             - node-name: src:002:opcua
 
 
 # de-facto standards for CDF CogniteClient and logger configuration.
